# CppNeuralNetwork

./: .gitignore  CMakeLists.txt  LICENSE  README.md
MachineLearningLib/: Layer.cpp  Layer.h  export.cpp  export.h
MachineLearningLib/Common/: Matrix.h  Matrix_declare.hpp  Matrix_implement.hpp  Memory.hpp
openBLAS/include/: openblas_config.h
src/: hello.cpp
